# faops

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  faops.c  khash.h  kseq.h
.github/workflows/: ccpp.yml
test/: 00-bats-works.bats  01-help.bats  02-count.bats  03-size.bats  04-frag.bats  05-rc.bats  06-one.bats  06-some.bats  07-filter.bats  08-split-name.bats  09-split-about.bats  10-n50.bats  11-order.bats  12-replace.bats  13-dazz.bats  14-interleave.bats  15-region.bats  16-masked.bats  17-faFilter.bats  replace.tsv  test_helper.bash
